Overflow-x bug

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,7 +3,6 @@
 
 html,
 body {
-  overflow-x: hidden;
   padding: 0;
   margin: 0;
   font-family: map-get($fonts, 'primary'), sans-serif;
