--- a/styles/header/HeaderBanner.module.scss
+++ b/styles/header/HeaderBanner.module.scss
@@ -5,6 +5,8 @@
     color: map-get($colors, 'text');
     z-index: 0;
     padding: 150px 0 0;
+    max-width: 100%;
+    overflow: hidden;
 
     &__inner {
         color: white;
